webpack hot reload configured

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="app">HI</div>
+  <div class="col-md-10" id="app">HI</div>
   <script src="dist/bundle.js"></script>
 </body>
 
